--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "clockwork": "^0.1.4",
+    "dotenv": "^8.0.0",
     "hapi": "^16.3.0",
     "now-logs": "^0.0.7",
     "request": "^2.79.0"
